[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.79"
authors = ["Alloy Contributors"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/alloy-rs/eips"
repository = "https://github.com/alloy-rs/eips"

[workspace.lints.rust]
missing-debug-implementations = "warn"
missing-docs = "warn"
unreachable-pub = "warn"
unused-must-use = "deny"
rust-2018-idioms = "deny"
unnameable-types = "warn"

[workspace.lints.rustdoc]
all = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
missing-const-for-fn = "warn"
use-self = "warn"
option-if-let-else = "warn"
redundant-clone = "warn"

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace.dependencies]
alloy-primitives = { version = "0.8.0", default-features = false }
alloy-rlp = { version = "0.3", default-features = false }

# serde
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

# rkyv
rkyv = "0.8"

# arbitrary
arbitrary = "1.3"

# for 7702 signed authorization list arbitrary
k256 = { version = "0.13", default-features = false, features = ["ecdsa"] }
rand = "0.8"

[patch.crates-io]
#alloy-primitives = { git = "https://github.com/scroll-tech/alloy-core", branch = "v0.8.0" }
#ruint = { git = "https://github.com/scroll-tech/uint.git", branch = "v1.12.3" }
alloy-primitives = { path = "../alloy-core/crates/primitives" }
ruint = { path = "../uint" }
